force-app/main/default/objects/Case_Comms__c/Case_Comms__c.object-meta.xml
<CustomObject>
    <label>Case Communication</label>
    <nameField>
        <displayFormat>Comm#{000000}</displayFormat>
        <label>Communication Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Communications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>