force-app/main/default/objects/Case_Comms__c/fields/Approver_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approver_Comments__c</fullName>
    <label>Approver Comments</label>
    <type>TextArea</type>
</CustomField>