force-app/main/default/objects/Case_Comms__c/validationRules/VR01_Prevent_updates_after_send.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_Prevent_updates_after_send</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(PRIORVALUE( Status__c)) = &apos;Sent&apos;</errorConditionFormula>
    <errorMessage>Sent Communication cannot be edited please create new communication from the case</errorMessage>
</ValidationRule>